Issue 180: Landing page: Play button is not middle-aligned (#185)

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -334,7 +334,7 @@ div.has-header .columns.product-stats:not(.product-stats-header) {
 
 .columns.inline-video > div > div .video-group button {
   position: absolute;
-  top: 35%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border: none;
